--- a/src/components/App/index.styl
+++ b/src/components/App/index.styl
@@ -1,14 +1,13 @@
 .App {
-    text-align: center;
+    width: 100%;
+    overflow: hidden;
 
     &-logo {
         animation: App-logo-spin infinite 20s linear;
-        height: 80px;
     }
 
     &-header {
         background-color: #222;
-        height: 150px;
         padding: 20px;
         color: white;
     }
