--- a/src/components/App/index.styl
+++ b/src/components/App/index.styl
@@ -1,23 +1,14 @@
-.App {
+.app {
     width: 100%;
     overflow: hidden;
+    display: flex;
 
-    &-logo {
-        animation: App-logo-spin infinite 20s linear;
+    &-left {
+        width: 100px;
     }
 
-    &-header {
-        background-color: #222;
-        padding: 20px;
-        color: white;
-    }
-
-    &-title {
-        font-size: 1.5em;
-    }
-
-    &-intro {
-        font-size: large;
+    &-main {
+        flex-grow: 1;
     }
 }
 
