--- a/src/globalStyle/myOverride.styl
+++ b/src/globalStyle/myOverride.styl
@@ -1,10 +1,17 @@
+@import './variables.styl';
+
+body{
+    max-width: 100%;
+    padding: 0;
+}
+
 a {
     &[href='#table-of-contents'] {
         display: none;
     }
 
     &:hover {
-        color: #333;
+        color: $text-color;
     }
 
     text-decoration: none;
