--- a/src/components/Sidebar/index.styl
+++ b/src/components/Sidebar/index.styl
@@ -1,11 +1,14 @@
 .sidebar {
-    width: 100%;
+    width: 300px;
     height: 100vh;
-    /* position: fixed; */
+    background: no-repeat 38% / cover url('../../imgs/sidebar/bg.jpg');
+    color: #fff;
+    font-weight: bold;
 
-    &-holder {
-    }
-    &-content {
-
+    &-logo {
+        width: 200px;
+        display: block;
+        margin: 0 auto;
+        transform: translateY(55px);
     }
 }
