--- a/src/components/App/index.styl
+++ b/src/components/App/index.styl
@@ -1,22 +1,14 @@
 .app {
     width: 100%;
     overflow: hidden;
-    display: flex;
 
     &-left {
-        width: 100px;
+        position: fixed;
+        top: 0;
+        left: 0;
     }
 
-    &-main {
-        flex-grow: 1;
-    }
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
+    &-main{
+        margin-left: 300px;
     }
 }
