--- a/src/components/Article/index.styl
+++ b/src/components/Article/index.styl
@@ -1,7 +1,12 @@
 /* @import './prism.css'; */
+@import '../../globalStyle/variables.styl';
 
 .article {
     max-width: 38em;
-    margin-left: 4em;
-    margin-right: 2em;
+    margin: 0 2em 10em 4em;
+
+    .post-datetime {
+        color: $text-color;
+        font-size: 0.9em;
+    }
 }
