--- a/src/components/Sidebar/index.styl
+++ b/src/components/Sidebar/index.styl
@@ -1,7 +1,7 @@
 .sidebar {
     width: 300px;
     height: 100vh;
-    background: no-repeat 38% / cover url('../../imgs/sidebar/bg.jpg');
+    background: no-repeat 50% / cover url('../../imgs/sidebar/bg.jpg');
     color: #fff;
     font-weight: bold;
 
@@ -9,6 +9,9 @@
         width: 200px;
         display: block;
         margin: 0 auto;
-        transform: translateY(55px);
+        transform: translateY(80%);
+        background: #fff;
+        padding: 10px;
+        border-radius: 20px;
     }
 }
