--- a/src/components/Article/index.styl
+++ b/src/components/Article/index.styl
@@ -2,8 +2,8 @@
 @import '../../globalStyle/variables.styl';
 
 .article {
-    max-width: 38em;
-    margin: 0 2em 10em 4em;
+    max-width: $article-max-width;
+    margin: 0 2em 200px 2em;
 
     .post-datetime {
         color: $text-color;
