--- a/src/globalStyle/variables.styl
+++ b/src/globalStyle/variables.styl
@@ -1,3 +1,7 @@
 $background-color = #f9f9f9;
 $text-color = #4a4a4a;
 $active-color = #2c8898;
+$inactive-color = #666;
+
+$article-max-width = 38em;
+
