--- a/src/components/Article/index.styl
+++ b/src/components/Article/index.styl
@@ -3,10 +3,21 @@
 
 .article {
     max-width: $article-max-width;
-    margin: 0 2em 200px 2em;
+    margin: 0 2em 80px 2em;
 
     .post-datetime {
         color: $text-color;
         font-size: 0.9em;
+    }
+}
+
+.license {
+    padding: 10px;
+    margin: 50px 2em;
+    background: #00b5da;
+    max-width: $article-max-width;
+
+    a {
+        color: $text-color;
     }
 }
