--- a/src/components/Sidebar/index.styl
+++ b/src/components/Sidebar/index.styl
@@ -5,13 +5,46 @@
     color: #fff;
     font-weight: bold;
 
+    &-content {
+        transform: translateY(50px);
+    }
+
     &-logo {
         width: 200px;
         display: block;
         margin: 0 auto;
-        transform: translateY(80%);
         background: #fff;
-        padding: 10px;
         border-radius: 20px;
+    }
+    ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 0;
+        margin-top: 50px;
+    }
+    li {
+        list-style: none;
+        width: auto;
+        display: inline;
+        text-align: center;
+        margin-bottom: 10px;
+        padding: 10px;
+        padding-top: 0;
+        border-bottom: 2px solid transparent;
+
+        &:hover {
+            border-bottom-color: #fff;
+        }
+    }
+
+    /* override */
+    a {
+        color: #fff;
+        &:hover {
+            color: #fff;
+            border-bottom: none;
+        }
     }
 }
