--- a/src/components/App/index.styl
+++ b/src/components/App/index.styl
@@ -12,3 +12,15 @@
         margin-left: 300px;
     }
 }
+
+/* phone */
+@media screen and (max-width: 768px) {
+    .app {
+        &-left {
+            position: relative;
+        }
+        &-main {
+            margin-left: 0;
+        }
+    }
+}
