--- a/src/globalStyle/myOverride.styl
+++ b/src/globalStyle/myOverride.styl
@@ -30,19 +30,19 @@ blockquote {
 }
 
 /* phone */
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     body {
         font-size: 1rem;
     }
 }
 /* tablet */
-@media (min-width: 769px) and (max-width: 1023px) {
+@media screen and (min-width: 769px) and (max-width: 1023px) {
     body {
         font-size: 1rem;
     }
 }
 /* desktop */
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
     body {
         font-size: 1rem;
     }
