--- a/src/components/Article/index.styl
+++ b/src/components/Article/index.styl
@@ -14,10 +14,11 @@
 .license {
     padding: 10px;
     margin: 50px 2em;
-    background: #00b5da;
+    background: $active-color;
+    color: #fff;
     max-width: $article-max-width;
 
     a {
-        color: $text-color;
+        color: #fff;
     }
 }
